2009-05-28 Magnus Hagdorn
 * configure.in: check if we should compile with OpenMP support
 * m4macros/ax_openmp.m4: add macro to find OpenMP
 * src/fortran/Makefile.am: add OpenMP flags
 * src/fortran/eis_glide.F90: report number of threads
 * src/fortran/eismint3_glide.F90: ditto
 * src/fortran/glex_ebm.F90: ditto
 * src/fortran/glint_example.F90: ditto
 * src/fortran/simple_glide.F90: ditto
 * src/fortran/glide_temp.F90: parallelise some of the spatial loops
 * src/fortran/glide_velo.F90: ditto
 * src/fortran/glimmer_utils.F90: check and report the number of threads. This
   still needs some fixing
 * src/python/glide_launch.py: set OpenMP number of threads
 * src/python/qsub_glide.sh: ditto

2009-05-05 Magnus Hagdorn
 * src/fortran/eis_glide.F90: get elapsed wall clock time
 * src/fortran/eismint3_glide.F90: ditto
 * src/fortran/glex_ebm.F90: ditto
 * src/fortran/glint_example.F90: ditto
 * src/fortran/simple_glide.F90: ditto
 * src/fortran/glimmer_writestats.F90: add wall clock time to list of arguments
 * src/fortran/test_writestats.F90: pass wall clock time
 * src/fortran/writestats.c: also store wall clock time in results file
 * src/fortran/writestats.h: update prototype

2009-05-05 Magnus Hagdorn
 * m4macros/netcdf.m4: minor improvement
 * src/fortran/Makefile.am: forgot to add NETCDF_LDFLAGS

2009-04-29 Magnus Hagdorn
 * Makefile.am: distribute bootstrap
 * configure.in: use new macros to find netcdf and module include switch
 * glimmer-config.in: rename variable
 * m4macros/ax_f90_module_flag.m4: imported macro to find module inclusion
   flag
 * m4macros/hdf5.m4: new module to find hdf5 (might be required for netcdf)
 * m4macros/netcdf.m4: new module for finding netCDF
 * src/fortran/Makefile.am: renamed some flags

2009-04-17 Magnus Hagdorn
 * INSTALL: mention how to customise SGE script
 * src/python/glide_launch.py: use popen instead of subprocess so it works
   with older python versions

2009-04-17 Magnus Hagdorn